--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,12 @@
 }
 
 body {
+  margin: 0;
+}
+
+body,
+button,
+input {
   font-family: 'Source Sans Pro',
                 -apple-system,
                 BlinkMacSystemFont,
@@ -20,11 +26,6 @@ body {
                 'Apple Color Emoji',
                 'Segoe UI Emoji',
                 'Segoe UI Symbol';
-}
-
-body,
-button,
-input {
   font-size: 16px;
   color: var(--color-dark);
 }
